--- a/Multiparadigma/index.html
+++ b/Multiparadigma/index.html
@@ -21,18 +21,20 @@
             <p>Produccion de contenidos digitales - 2025</p>
         </div> 
     </header>
+    <div class="h">
+        <h1>Lenguajes Multiparadigma</h1>
+    </div>
     <nav>
-        <h1>Imágenes y videos</h1>
         <table>
             <tr>
                 <td>
                     <a href="../Main/index.html">Inicio</a>
                 </td>
                 <td>
-                    <a href="../Listas/index.html">Listas</a>
+                    <a href="../Estructurado/index.html">Lenguajes Estructurados</a>
                 </td>
                 <td>
-                    <a href="../Tablas/index.html">Tablas</a>
+                    <a href="../O a objetos/index.html">Lenguajes Orientados a Objetos</a>
                 </td>
             </tr>
         </table>
