--- a/Estructurado/index.html
+++ b/Estructurado/index.html
@@ -21,18 +21,20 @@
             <p>Produccion de contenidos digitales - 2025</p>
         </div> 
     </header>
+    <div class="h">
+        <h1>Lenguajes Esctructuados</h1>
+    </div>
     <nav>
-        <h1>PÁGINA LISTAS</h1>
         <table>
             <tr>
                 <td>
                     <a href="../Main/index.html">Inicio</a>
                 </td>
                 <td>
-                    <a href="../Tablas/index.html">Tablas</a>
+                    <a href="../O a objetos/index.html">Lenguajes Orientados a Objetos</a>
                 </td>
                 <td>
-                    <a href="../Videos/index.html">Imágenes y videos</a>
+                    <a href="../Multiparadigma/index.html">Lenguajes multiparadigma</a>
                 </td>
             </tr>
         </table>
