--- a/O a objetos/index.html
+++ b/O a objetos/index.html
@@ -21,8 +21,10 @@
             <p>Produccion de contenidos digitales - 2025</p>
         </div> 
     </header>
+    <div class="h">
+        <h1>Lenguajes Orientados a Objetos</h1>
+    </div>
     <nav>
-        <h1>PÁGINA TABLAS</h1>
         <table>
             <tr>
                 <td>
