--- a/Estructurado/index.html
+++ b/Estructurado/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img src="../IMG/logotipo-villa-de-los-niños.png" width="100px">
+        <img src="../IMG/logotipo-villa-de-los-niños.png" width="100px" class="L_circulo">
         <div>
             <p>Villa de los niños</p>
             <p>Bachillerato en Ciencias y Letras con Orientacion en Computación</p>
