--- a/Main/index.html
+++ b/Main/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img src="../IMG/logotipo-villa-de-los-niños.png" width="100px">
+        <img src="../IMG/logotipo-villa-de-los-niños.png" width="100px" class="L_circulo">
         <div>
             <p>Villa de los niños</p>
             <p>Bachillerato en Ciencias y Letras con Orientacion en Computación</p>
@@ -72,7 +72,7 @@
                 </table>
            </div>
             <section>
-                <img src="../IMG/logotipo-villa-de-los-niños.png" width="300px" id="anim">
+                <img src="../IMG/logotipo-villa-de-los-niños.png" width="300px" id="anim" class="L_circulo">
             </section>
         </article>
     </main>
