--- a/Estructurado/index.html
+++ b/Estructurado/index.html
@@ -40,72 +40,32 @@
         </table>
     </nav>
     <main>
-        <table>
-            <tr>
-                <td id="title">No ordenadas (ul)</td>
-                <td id="title">Ordenadas (ol)</td>
-            </tr>
-            <tr>
-                <td>
-                    <em>Type: disc</em>
-                    <ul class="disc">
-                        <li>Elemento 1</li>
-                        <li>Elemento 2</li>
-                        <li>Elemento 3</li>
-                        <li>Elemento 4</li>
-                    </ul>
-                </td>
-                <td>
-                    <em>Type: 1</em>
-                    <ol class="n1">
-                        <li>Elemento 1</li>
-                        <li>Elemento 2</li>
-                        <li>Elemento 3</li>
-                        <li>Elemento 4</li>
-                    </ol>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <em>Type: circle</em>
-                    <ul class="circle">
-                        <li>Elemento 1</li>
-                        <li>Elemento 2</li>
-                        <li>Elemento 3</li>
-                        <li>Elemento 4</li>
-                    </ul>
-                </td>
-                <td>
-                    <em>Type: A</em>
-                    <ol class="A">
-                        <li>Elemento 1</li>
-                        <li>Elemento 2</li>
-                        <li>Elemento 3</li>
-                        <li>Elemento 4</li>
-                    </ol>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <em>Type: square</em>
-                    <ul  class="square">
-                        <li>Elemento 1</li>
-                        <li>Elemento 2</li>
-                        <li>Elemento 3</li>
-                        <li>Elemento 4</li>
-                    </ul>
-                </td>
-                <td>
-                    <em>Type: I</em>
-                    <ol class="I">
-                        <li>Elemento 1</li>
-                        <li>Elemento 2</li>
-                        <li>Elemento 3</li>
-                        <li>Elemento 4</li>
-                    </ol>
-                </td>
-            </tr>
-        </table>
+        <p>
+            La programación estructurada es un paradigma de programación que busca mejorar la claridad, calidad y eficiencia en el desarrollo de programas informáticos. Se basa en la utilización de tres estructuras de control fundamentales: secuencia, selección e iteración. Este enfoque permite a los programadores crear algoritmos más comprensibles y mantenibles, evitando el uso de comandos como "goto", que pueden llevar a un código desorganizado conocido como "código espagueti" 123.
+Características Principales
+Estructuras de Control: La programación estructurada se centra en tres tipos de estructuras:
+Secuencia: Las instrucciones se ejecutan en el orden en que aparecen.
+Selección: Permite ejecutar diferentes bloques de código dependiendo de condiciones (por ejemplo, usando if o switch).
+Iteración: Permite repetir un bloque de código mientras se cumpla una condición (usando bucles como for y while) 24.
+Modularidad: Los programas se pueden dividir en subrutinas o funciones, lo que facilita su comprensión y mantenimiento. Cada subrutina puede ser llamada desde diferentes partes del programa, promoviendo la reutilización del código 35.
+Teorema de Böhm-Jacopini: Este teorema establece que cualquier algoritmo puede ser representado utilizando únicamente las tres estructuras mencionadas, lo que fundamenta la base teórica de la programación estructurada 24.
+
+Ventajas
+Mejor Legibilidad: Al evitar saltos incontrolados en el flujo del programa, se mejora la legibilidad del código.
+Facilidad de Mantenimiento: La modularidad permite realizar cambios sin afectar otras partes del programa.
+Reducción de Errores: Al seguir un enfoque estructurado, se minimizan los errores comunes asociados con el uso excesivo de comandos incondicionales 13.
+
+Historia
+La programación estructurada comenzó a tomar forma en la década de 1960, con contribuciones significativas de Edsger Dijkstra y Niklaus Wirth. Dijkstra, en particular, argumentó en su artículo "Goto, el comando considerado perjudicial" que el uso indiscriminado del comando "goto" afectaba negativamente la legibilidad del código 12. El lenguaje Pascal también jugó un papel crucial en la enseñanza y difusión de estos principios 13.
+En resumen, la programación estructurada es fundamental para desarrollar software confiable y mantenible, siendo un pilar en la educación informática y en la práctica profesional.
+
+C: Un lenguaje de programación procedimental ampliamente utilizado, especialmente en sistemas operativos y desarrollo de software de bajo nivel.
+Pascal: Un lenguaje diseñado para la enseñanza y desarrollo de software, que enfatiza la programación estructurada.
+Fortran: Aunque es más antiguo, se considera un lenguaje estructurado utilizado en aplicaciones científicas y de ingeniería.
+Ada: Un lenguaje diseñado para sistemas críticos, que también sigue principios de programación estructurada.
+Python: Aunque es multiparadigma, permite una programación estructurada clara y legible.
+BASIC: Originalmente diseñado para la enseñanza, este lenguaje también se basa en conceptos de programación estructurada.
+        </p>
     </main>
     <footer>
         <p>
