--- a/Multiparadigma/index.html
+++ b/Multiparadigma/index.html
@@ -40,30 +40,26 @@
         </table>
     </nav>
     <main>
-        <table>
-            <tr>
-                <td>
-                    <a href="../IMG/prr.webp"><img src="../IMG/prr.webp" width="20%"></a>
-                </td>
-                <td>
-                    <a href="../IMG/anderson.jpg"><img src="../IMG/anderson.jpg" width="40%"></a>
-                </td>
-                <td>
-                    <a href="../IMG/neon.jpg"><img src="../IMG/neon.jpg" width="16%"></a>
-                </td>
-            </tr>
-        </table>
-        <article>
-            <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/x--inhNTATk?si=CL2yZ-JgPwZAj6F7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-            <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/esMOu5i39SA?si=1dnOwrOWNju80Ph5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-            <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VaHFvFTeXTE?si=bMlAyTT2omxfBNFC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-        </article>
+        <p>
+            La programación multiparadigma es un enfoque flexible que permite a los desarrolladores utilizar más de un paradigma de programación dentro de un mismo lenguaje o entorno de desarrollo. Este enfoque se ha vuelto cada vez más popular, ya que permite abordar problemas complejos mediante la combinación de diferentes técnicas y estilos de programación, lo que resulta en soluciones más eficientes y adaptables.
+Características de la Programación Multiparadigma
+Flexibilidad: Los desarrolladores pueden elegir el paradigma más adecuado para cada tarea, ya sea programación orientada a objetos, funcional, imperativa o lógica, entre otros. Esta versatilidad permite abordar diversos desafíos en el desarrollo de software 12.
+Combinación de Paradigmas: Un lenguaje multiparadigma admite múltiples estilos de programación, lo que permite a los programadores aprovechar las fortalezas de cada paradigma. Por ejemplo, un desarrollador puede utilizar programación orientada a objetos para estructurar el código y programación funcional para manejar operaciones específicas 15.
+Eficiencia en el Desarrollo: Al permitir el uso de diferentes paradigmas, se mejora la reutilización del código y se fomenta la innovación en el desarrollo de software. Esto también ayuda a reducir la deuda técnica y mejora la coherencia del software 14.
+Lenguajes Comunes en Programación Multiparadigma
+Los siguientes lenguajes son ejemplos representativos que soportan múltiples paradigmas:
+Python: Permite programación orientada a objetos, funcional e imperativa.
+JavaScript: Soporta programación orientada a objetos y funcional.
+C++: Combina programación imperativa con orientación a objetos.
+Scala: Integra características de programación funcional y orientada a objetos.
+PHP: Admite tanto la programación procedimental como la orientada a objetos.
+Beneficios
+La adopción de la programación multiparadigma ofrece varios beneficios:
+Soluciones Adaptativas: Los desarrolladores pueden adaptar sus enfoques según las necesidades específicas del proyecto.
+Mejor Mantenibilidad: Al organizar el código en diferentes paradigmas, se facilita su mantenimiento y comprensión.
+Aumento de Productividad: La capacidad para emplear el mejor paradigma para cada tarea puede acelerar el proceso de desarrollo y mejorar la calidad del software 126.
+En conclusión, la programación multiparadigma representa una evolución en el desarrollo de software, permitiendo a los programadores ser más creativos y eficientes al combinar diversas técnicas y enfoques para resolver problemas complejos.
+        </p>
     </main>
     <footer>
         <p>
