--- a/O a objetos/index.html
+++ b/O a objetos/index.html
@@ -40,159 +40,31 @@
         </table>
     </nav>
     <main>
-        <aside>
-            <table>
-                <tr>
-                    <td rowspan="3" bgcolor="#008000"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td rowspan="2" colspan="2" bgcolor="#008000"></td>
-                </tr>
-              <tr>
-                    <td></td>
-                    <td rowspan="3" bgcolor="#008000"></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td rowspan="3" bgcolor="#008000"></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td rowspan="3" bgcolor="#008000"></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td rowspan="3" bgcolor="#008000"></td>
-                </tr>
-                <tr>
-                    <td rowspan="2" colspan="3" bgcolor="#008000"></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
-        </aside>
-        <article>
-            <table>
-                <tr>
-                    <td colspan="2" rowspan="4">
-                        <img src="https://i.pinimg.com/originals/c8/46/6e/c8466e3b22ea3c5b127c5386c931332d.png" width="100%">
-                    </td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td colspan="3" rowspan="2"></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td colspan="3" rowspan="5">
-                        <img src="https://img.freepik.com/fotos-premium/lobo-hermoso-paisaje-noche-luna_145644-24009.jpg?w=1480" width="100%">
-                    </td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                    <td></td>
-                    <td></td>
-                    <td colspan="2" rowspan="4">
-                        <img src="https://img.freepik.com/foto-gratis/lobo-parado-bosque-fondo-colorido_188544-44538.jpg?size=626&ext=jpg" width="100%">
-                    </td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td colspan="2" rowspan="2"></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td rowspan="2"></td>
-                    <td colspan="3"></td>
-                    <td rowspan="2"></td>
-                    <td rowspan="2"></td>
-                    <td colspan="3"></td>
-                </tr>
-                <tr>
-                    <td colspan="3"></td>
-                    <td colspan="3"></td>
-                </tr>
-            </table>
-        </article>
-        <section>
-            <table>
-                <thead>
-                    <tr>
-                        <td id="c1">No.</td>
-                        <td>Carné</td>
-                        <td>Nombre</td>
-                        <td>Apellido</td>
-                        <td>Correo electrónico</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td id="c1">1</td>
-                        <td>B099KGM</td>
-                        <td>José</td>
-                        <td>Barrera</td>
-                        <td>josbarr384@gmail.com</td>
-                    </tr>
-                    <tr>
-                        <td id="c1">2</td>
-                        <td>A155LMJ</td>
-                        <td>Yasmin</td>
-                        <td>Interiano</td>
-                        <td>yasinteri88@gmail.com</td>
-                    </tr>
-                    <tr>
-                        <td id="c1">3</td>
-                        <td>D453FJK</td>
-                        <td>Daniel</td>
-                        <td>Sagastumez</td>
-                        <td>sagatiel001@gmail.com</td>
-                    </tr>
-                    <tr>
-                        <td id="c1">4</td>
-                        <td>F873JFX</td>
-                        <td>Nanci</td>
-                        <td>Díaz</td>
-                        <td>dianci990@gmail.com</td>
-                    </tr>
-                    <tr>
-                        <td id="c1">5</td>
-                        <td>C721MLX</td>
-                        <td>Joel</td>
-                        <td>López</td>
-                        <td>lopel567@gmail.com</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+        <p>
+            La Programación Orientada a Objetos (POO) es un paradigma de programación que organiza el diseño del software en torno a objetos, los cuales encapsulan tanto datos como funciones. Este enfoque permite a los desarrolladores modelar sistemas complejos de manera más intuitiva y modular, facilitando la reutilización de código y la mantenibilidad del software.
+            Principios Fundamentales de la POO
+            Encapsulación: Los objetos combinan datos y métodos que operan sobre esos datos, ocultando los detalles internos y exponiendo solo lo necesario a través de interfaces públicas.
+            Herencia: Permite crear nuevas clases basadas en clases existentes, heredando atributos y métodos, lo que promueve la reutilización del código.
+            Polimorfismo: Permite que diferentes clases sean tratadas como instancias de la misma clase a través de una interfaz común, facilitando la interacción entre objetos de diferentes tipos.
+            Características Clave
+            Clases y Objetos: Una clase es una plantilla o modelo que define las propiedades (atributos) y comportamientos (métodos) comunes a todos los objetos de ese tipo. Un objeto es una instancia concreta de una clase.
+            Interacción entre Objetos: Los objetos pueden comunicarse entre sí mediante el envío de mensajes (llamadas a métodos), lo que permite una colaboración fluida y directa en el sistema.
+            Reutilización de Código: La POO fomenta la creación de componentes modulares que pueden ser reutilizados en diferentes contextos, reduciendo la duplicación de código y mejorando la eficiencia del desarrollo.
+            Ventajas de la POO
+            Organización y Mantenibilidad: Al estructurar el código en objetos, se mejora la legibilidad y se facilita el mantenimiento del software.
+            Escalabilidad: La POO es especialmente útil para sistemas grandes y complejos, donde se requiere un diseño flexible que pueda adaptarse a cambios futuros.
+            Desarrollo Colaborativo: Facilita el trabajo en equipo al permitir que diferentes desarrolladores trabajen en distintos objetos o módulos sin interferir con el trabajo de otros.
+            Lenguajes Comunes en POO
+            Los lenguajes más representativos que soportan la programación orientada a objetos incluyen:
+            Java
+            C++
+            C#
+            Python
+            Ruby
+            PHP
+            La programación orientada a objetos ha ganado popularidad debido a su capacidad para modelar sistemas complejos de manera efectiva, convirtiéndose en un enfoque estándar en el desarrollo de software moderno.
+        
+        </p>    
     </main>
     <footer>
         <p>
