--- a/Main/index.html
+++ b/Main/index.html
@@ -10,6 +10,7 @@
     <meta name="date" content="2024-11-26">
     <meta http-equiv="refresh" content="10000; url=index.html">
     <link rel="stylesheet" href="Css/style.css">
+    <script src="JS/script.js"></script>
     <title>Maquetación</title>
 </head>
 <body>
